--- a/src/app.pcss
+++ b/src/app.pcss
@@ -1,7 +1,6 @@
 /* Write your global styles here, in PostCSS syntax */
 
 @tailwind base;
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -27,9 +26,11 @@ img {
 
 #preeti_text {
 	font-family: 'Preeti';
-	font-size: 1.75em;
 }
 
-@tailwind components;
 
-@tailwind utilities;
+textarea {
+	font-size: 1.5em;
+	resize: both;
+}
+
